--- a/.github/ISSUE_TEMPLATE/1_Bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/1_Bug_report.yaml
@@ -7,7 +7,7 @@ body:
     - type: checkboxes
       id: profile
       attributes:
-        label: Are you a:
+        label: Select your profile
         options:
           - label: Streamer
           - label: User
