--- a/.github/ISSUE_TEMPLATE/1_Bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/1_Bug_report.yaml
@@ -28,7 +28,7 @@ body:
     - type: input
       id: section-other
       attributes:
-          label: Other:
+          label: Other
           placeholder: Section with a bug
       validations:
           required: false
