--- a/.github/ISSUE_TEMPLATE/1_Bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/1_Bug_report.yaml
@@ -68,7 +68,7 @@ body:
       attributes:
           label: 🧨 How to reproduce
           description: 
-            `⚠️  This is the most important part of the report ⚠️`
+            ⚠️  This is the most important part of the report ⚠️
             Without a way to easily reproduce your issue, there is little chance we will be able to help you and work on a fix.
             Please, take the time to show us screenshots or/and a video that is needed for others to reproduce the problem.
           value: 
