--- a/.github/ISSUE_TEMPLATE/1_Bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/1_Bug_report.yaml
@@ -32,11 +32,11 @@ body:
       attributes:
         label: 🖥️ Browser
         options:
-          - label: CHROME
-          - label: SAFARI
-          - label: EDGE
-          - label: FIREFOX
-          - label: OTHER
+          - CHROME
+          - SAFARI
+          - EDGE
+          - FIREFOX
+          - OTHER
     - type: dropdown
       id: section
       attributes:
