--- a/.github/ISSUE_TEMPLATE/1_Bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/1_Bug_report.yaml
@@ -1,5 +1,5 @@
-name: 🪲 Bug Report
-description: Help us improve ePlay!
+name: 🐞 Report a Bug or Issue
+description: Help us improve ePlay, and share a bug or issue
 title: "[BUG] "
 labels: ":lady_beetle:  BUG"
 
