--- a/.github/ISSUE_TEMPLATE/1_Bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/1_Bug_report.yaml
@@ -45,6 +45,7 @@ body:
           - 💬 LIVE CHATROOM 
           - 📺 CHANNEL 
           - 📡 STREAMING DASHBOARD
+          - 📊 MY.EPLAY ADMIN
           - 👤 ACCOUNT
           - 🛒 BUY TOKENS
           - 🪙 TIPPING
