--- a/.github/ISSUE_TEMPLATE/1_Bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/1_Bug_report.yaml
@@ -73,13 +73,14 @@ body:
           label: 🧨 How to reproduce
           description: |
             
-            ⚠️  This is the most important part of the report ⚠️ 
+            ⚠️  `This is the most important part of the report` ⚠️ 
             Without a way to reproduce your issue, it will make it difficult for our team to work on a fix.
             Please, take the time to clearly explain what you did to experience your issue.
             You can show us screenshot(s) or/and video(s) that is needed for others to reproduce the problem.
           value: |
-            1. Go to
-            2. Then go to
+            1. I was on 
+            2. Then I clicked on
+            3. And then
       validations:
           required: true
     - type: textarea
