--- a/.github/ISSUE_TEMPLATE/1_Bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/1_Bug_report.yaml
@@ -73,7 +73,7 @@ body:
           label: 🧨 How to reproduce
           description: |
             
-            ⚠️  `This is the most important part of the report` ⚠️ 
+            ⚠️  **This is the most important part of the report** ⚠️ 
             Without a way to reproduce your issue, it will make it difficult for our team to work on a fix.
             Please, take the time to clearly explain what you did to experience your issue.
             You can show us screenshot(s) or/and video(s) that is needed for others to reproduce the problem.
@@ -88,10 +88,10 @@ body:
       attributes:
           label: ⚡️ Expected Behavior
           description: |
-            Optional: only if you have suggestions on a fix/reason for the bug
+            **Optional**: only if you have suggestions on a fix/reason for the bug
     - type: textarea
       id: additional-context
       attributes:
           label: 😇 Anything else you could add?
           description: |
-            Optional: Any other context about the problem: console log messages, screenshots, videos, etc. Need help to attach a file? [Read More](https://docs.github.com/en/get-started/writing-on-github/working-with-advanced-formatting/attaching-files)
+            **Optional**: Any other context about the problem: console log messages, screenshots, videos, etc. Need help to attach a file? [Read More](https://docs.github.com/en/get-started/writing-on-github/working-with-advanced-formatting/attaching-files)
