--- a/.github/ISSUE_TEMPLATE/1_Bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/1_Bug_report.yaml
@@ -94,4 +94,6 @@ body:
       attributes:
           label: 😇 Anything else you could add?
           description: |
-            **Optional**: Any other context about the problem: console log messages, screenshots, videos, etc. Need help to attach a file? [Read More](https://docs.github.com/en/get-started/writing-on-github/working-with-advanced-formatting/attaching-files)
+            **Optional**: Any other context about the problem: your username or channel
+            You can also add any console log messages, screenshots, videos, etc.
+            Need help to attach a file? [Read More](https://docs.github.com/en/get-started/writing-on-github/working-with-advanced-formatting/attaching-files)
